# Hangman

./: .gitignore  CMakeLists.txt  Gamer.cpp  Gamer.h  Hangman.cpp  Hangman.h  Main.cpp  Manager.cpp  Manager.h  Person.cpp  Person.h  ReadWords.cpp  ReadWords.h  WordProcessor.cpp  WordProcessor.h  config.txt  users.txt
